--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 
 body {
     background: var(--preto);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
@@ -90,8 +90,13 @@ header nav a:hover {
 .filme-principal .container {
     width: 70%;
 }
-.box-filme{
+
+.box-filme {
     height: 100%;
     width: 100%;
     display: block;
+}
+
+.carrosel-filmes {
+    margin-top: 5px;
 }
